Bug 397464 - sidekickopen24.com in email causes MailTrackerBlackList to not display email content
Summary: sidekickopen24.com in email causes MailTrackerBlackList to not display email ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 5.8.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-14 22:33 UTC by Con Hennessy
Modified: 2018-08-16 11:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Con Hennessy 2018-08-14 22:33:13 UTC
When I email from one particular person which does not display for me
in KMail. When I click on their email, all I see is "HTML Message" in the
message panel and the following in the logs for kmail :
 
> > QObject::connect: Cannot queue arguments of type
> > 'MessageViewer::BlockMailTrackingUrlInterceptor::MailTrackerBlackList'

When I view the source of the mail I can see that it contains "sidekickopen24.com", and this is in the file blockmailtrackingurlinterceptor.cpp.

I've asked the individual to not include the sidekickopen domain, and when he removes this I can again see the contents of his emails as expected.
 
So I've 2 problems with this :
1) there is obviously a bug, as the content should be displayed even if this tracking url is disabled; and
2) there should be an option to disable this behaviour.
Comment 1 Laurent Montel 2018-08-15 08:26:33 UTC
Could you send me in private this mail as mbox ?

I fixed connect problem some week ago in 5.9.0
but I need to fix your other problem.

By default we can see content so I need to test it.
thanks
Comment 2 Laurent Montel 2018-08-16 11:32:29 UTC
Thanks for email.
Indeed feature was broken.

And indeed we must be able to disable it (but we can do it in next big release as we need new i18n)
"as the content should be displayed even if this tracking url is disabled;" I will commit a fix soon.
Comment 3 Laurent Montel 2018-08-16 11:33:05 UTC
Git commit d28e3314d6ec12de7c8568d3b527a17a2757363f by Laurent Montel.
Committed on 16/08/2018 at 11:32.
Pushed by mlaurent into branch 'Applications/18.08'.

Fix block tracking url

M  +1    -2    messageviewer/src/viewer/webengine/blockmailtrackingurlinterceptor/blockmailtrackingurlinterceptor.cpp

https://commits.kde.org/messagelib/d28e3314d6ec12de7c8568d3b527a17a2757363f
Comment 4 Laurent Montel 2018-08-16 11:34:29 UTC
Git commit 35f38d5ebe5e508ee199d5043a0f20613650d67e by Laurent Montel.
Committed on 16/08/2018 at 11:34.
Pushed by mlaurent into branch 'master'.

Fix Bug 397464 - sidekickopen24.com in email causes MailTrackerBlackList to not display email content

FIXED-IN: 5.10.0

M  +1    -1    CMakeLists.txt
M  +4    -0    messageviewer/src/settings/messageviewer.kcfg.cmake
M  +1    -0    messageviewer/src/viewer/viewer_p.cpp
M  +12   -3    messageviewer/src/viewer/webengine/mailwebengineview.cpp
M  +1    -0    messageviewer/src/viewer/webengine/mailwebengineview.h
M  +5    -0    webengineviewer/src/networkmanager/interceptormanager.cpp
M  +1    -0    webengineviewer/src/networkmanager/interceptormanager.h
M  +13   -2    webengineviewer/src/urlinterceptor/networkurlinterceptor.cpp
M  +1    -0    webengineviewer/src/urlinterceptor/networkurlinterceptor.h

https://commits.kde.org/messagelib/35f38d5ebe5e508ee199d5043a0f20613650d67e
Comment 5 Laurent Montel 2018-08-16 11:35:12 UTC
Git commit 654c55c6a48024c88aa6b89d218a13eccb1f4c85 by Laurent Montel.
Committed on 16/08/2018 at 11:35.
Pushed by mlaurent into branch 'master'.

Fix Bug 397464 - sidekickopen24.com in email causes MailTrackerBlackList to not display email content

M  +1    -1    CMakeLists.txt
M  +3    -0    src/configuredialog/configuresecuritypage.cpp
M  +1    -0    src/main.cpp
M  +8    -1    src/ui/securitypagegeneraltab.ui

https://commits.kde.org/kmail/654c55c6a48024c88aa6b89d218a13eccb1f4c85