Fix Bug 397464 - sidekickopen24.com in email causes MailTrackerBlackList to not display email content

FIXED-IN: 5.10.0
BUG: 397464