messageviewer/src/viewer/webengine/mailwebengineview.h
@@ -67,6 +67,7 @@ public:
     void setLinkHovered(const QUrl &url);
     void setViewer(MessageViewer::ViewerPrivate *viewer);
     bool execPrintPreviewPage(QPrinter *printer, int timeout);
+    void readConfig();
 public Q_SLOTS:
     void slotZoomChanged(qreal zoom);
     void slotShowDetails();
