webengineviewer/src/networkmanager/interceptormanager.h
@@ -37,6 +37,7 @@ public:
     ~InterceptorManager();
     void addInterceptor(WebEngineViewer::NetworkPluginUrlInterceptorInterface *interceptor);
     Q_REQUIRED_RESULT QList<QAction *> interceptorUrlActions(const WebEngineViewer::WebHitTestResult &result) const;
+    void removeInterceptor(WebEngineViewer::NetworkPluginUrlInterceptorInterface *interceptor);
 private:
     NetworkAccessManagerWebEnginePrivate *const d;
 };
