messageviewer/src/settings/messageviewer.kcfg.cmake
@@ -146,6 +146,10 @@ xsi:schemaLocation="http://www.kde.org/standards/kcfg/1.0 http://www.kde.org/sta
       <label>List of emails in scam white list</label>
       <default></default>
     </entry>
+    <entry name="MailTrackingUrlEnabled" type="Bool">
+      <label>Enable Mail Tracking Url</label>
+      <default>true</default>
+    </entry>    
   </group>
   <group name="MDN">
     <entry name="notSendWhenEncrypted" type="Bool" key="not-send-when-encrypted">
